Add cookie domain env support

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,10 @@ DJANGO_ALLOWED_HOSTS=127.0.0.1,localhost
 # Separado por comas. Debe incluir el esquema https://
 DJANGO_CSRF_TRUSTED_ORIGINS=https://127.0.0.1,https://localhost
 
+# Útil si usas www y sin www (comparte cookies entre subdominios).
+# Ejemplo para compartir entre seguridad.iagmexico.com y www.seguridad.iagmexico.com:
+DJANGO_COOKIE_DOMAIN=.seguridad.iagmexico.com
+
 # Pon 1 si estás detrás de un reverse proxy que termina TLS (Nginx, etc.)
 DJANGO_BEHIND_PROXY=0
 
